--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "luminusBack_v2",
+  "name": "qualicorp-test-backend",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
